# Liveal

./: .env.example  README.md  next.config.mjs  package-lock.json  package.json
next/: .env.example  package-lock.json  package.json  tailwind.config.cjs
next/prisma/: schema.prisma
next/src/: middleware.ts
next/src/env/: schema.mjs
next/src/pages/: _app.tsx  index.tsx  search.tsx  signin.tsx
next/src/server/: auth.ts
next/src/styles/: globals.css
next/src/types/: post.ts
next/src/utils/: addFriend.ts  getComments.ts  getFriends.ts  getLikes.ts  removeFriend.ts
prisma/: schema.prisma
recomender-engine/: .env.example  Cargo.toml
recomender-engine/src/: get_posts.rs  main.rs  rate_post.rs
recomender-engine/src/auth/: mod.rs
recomender-engine/src/db/: mod.rs  types.rs
recomender-engine/src/engine/: mod.rs
recommender-engine/: Cargo.toml  Dockerfile
recommender-engine/src/: main.rs
recommender-engine/src/auth/: mod.rs
recommender-engine/src/db/: mod.rs  types.rs
recommender-engine/src/engine/: mod.rs
recommender-engine/src/env/: mod.rs
src/app/: connectionOrChatCard.tsx  feedPost.tsx  head.tsx  layout.tsx  navbar.tsx  page.tsx
src/app/account/: layout.tsx
src/app/feed/: connectionOrChatCard.tsx  feedPost.tsx  page.tsx  (+2 more)
src/components/: bgWithLivealLogo.tsx  button.tsx  signInFooter.tsx
src/pages/: 404.tsx  _app.tsx  feed.tsx  index.tsx  middleware.ts  signin.tsx
src/server/: auth.ts
src/styles/: globals.css
src/types/: friend.ts  post.ts
src/utils/: addFriend.ts  getComments.ts  getFriends.ts  getLikes.ts  removeFriend.ts
(+44 files in other folders)
