[package]
name = "recomender-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version="0.5.0-rc.3", features = ["json"] }
sqlx = { version = "0.6.3", features = [  "runtime-async-std-native-tls", "mysql" ] }
async-std = { version = "1", features = [ "attributes" ] }
reqwest = "0.11.17"
serde = "1.0.2"